--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,11 +61,6 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.4s;
 }
 
-.back-to-top i {
-  font-size: 28px;
-  color: #fff;
-  line-height: 0;
-}
 
 .back-to-top:hover {
   background: #57aae1;
@@ -155,11 +150,6 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
 }
 
-.navbar a i {
-  font-size: 12px;
-  line-height: 0;
-  margin-left: 5px;
-}
 
 .navbar a:hover, .navbar .active, .navbar li:hover > a {
   color: #14279b;
@@ -203,9 +193,6 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
 }
 
-.navbar .dropdown ul a i {
-  font-size: 12px;
-}
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
   color: #14279b;
@@ -330,9 +317,6 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 20px;
 }
 
-.navbar-mobile .dropdown ul a i {
-  font-size: 12px;
-}
 
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
   color: #14279b;
@@ -348,7 +332,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 70vh;
-  margin-top: 70px;
+  margin-top: 10px;
 }
 
 #hero h1 {
@@ -356,6 +340,9 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
+  color: #14279b;
+}
+#counts svg ,#about svg{
   color: #14279b;
 }
 
@@ -371,11 +358,12 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 16px;
   letter-spacing: 1px;
   display: inline-block;
-  padding: 10px 30px;
+  padding: 8px 30px;
   border-radius: 50px;
   transition: 0.5s;
   color: #14279b;
   border: 2px solid #14279b;
+  margin:0 10px ;
 }
 
 #hero .btn-get-started:hover {
@@ -610,28 +598,8 @@ input:checked + .slider:before {
   font-size: 26px;
 }
 
-.about .content ul {
-  list-style: none;
-  padding: 0;
-}
 
-.about .content ul li {
-  padding-left: 28px;
-  position: relative;
-}
 
-.about .content ul li + li {
-  margin-top: 10px;
-}
-
-.about .content ul i {
-  position: absolute;
-  left: 0;
-  top: 2px;
-  font-size: 20px;
-  color: #14279b;
-  line-height: 1;
-}
 
 .about .content p:last-child {
   margin-bottom: 0;
@@ -686,13 +654,7 @@ input:checked + .slider:before {
   width: 100%;
 }
 
-.counts .content .count-box i {
-  display: block;
-  font-size: 36px;
-  color: #14279b;
-  float: left;
-  line-height: 0;
-}
+
 
 .counts .content .count-box span {
   font-size: 36px;
@@ -778,9 +740,9 @@ input:checked + .slider:before {
 
 .services .icon {
   margin: 0 auto 20px auto;
-  padding-top: 10px;
+  align-content: center;
+  text-align: -webkit-center;
   display: inline-block;
-  text-align: center;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -788,11 +750,7 @@ input:checked + .slider:before {
   transition: all 0.3s ease-in-out;
 }
 
-.services .icon i {
-  font-size: 36px;
-  line-height: 1;
-  color: #fff;
-}
+
 
 .services .title {
   font-weight: 700;
@@ -818,7 +776,7 @@ input:checked + .slider:before {
   background: #fff;
 }
 
-.services .icon-box:hover .icon i {
+.services .icon-box:hover .icon svg {
   color: #14279b;
 }
 
@@ -892,12 +850,6 @@ input:checked + .slider:before {
   padding: 20px;
   background: #f6f6f6;
   transition: ease-in-out 0.3s;
-}
-
-.features .icon-box i {
-  font-size: 32px;
-  padding-right: 10px;
-  line-height: 1;
 }
 
 .features .icon-box h3 {
@@ -1240,18 +1192,12 @@ input:checked + .slider:before {
   align-items: center;
 }
 
-.team .member .social a i {
-  line-height: 0;
-}
 
 .team .member .social a:hover {
   color: #14279b;
 }
 
-.team .member .social i {
-  font-size: 18px;
-  margin: 0 2px;
-}
+
 
 .team .member .member-info {
   padding: 25px 15px;
@@ -1337,11 +1283,7 @@ input:checked + .slider:before {
   padding-bottom: 16px;
 }
 
-.pricing .box ul i {
-  color: #14279b;
-  font-size: 18px;
-  padding-right: 4px;
-}
+
 
 .pricing .box ul .na {
   color: #ccc;
@@ -1394,14 +1336,6 @@ input:checked + .slider:before {
   border-bottom: 1px solid #eeeeee;
 }
 
-.faq .faq-item i {
-  color: #8bc4ea;
-  font-size: 24px;
-  float: left;
-  line-height: 0;
-  padding: 13px 0 0 0;
-  margin: 0;
-}
 
 .faq .faq-item h4 {
   font-size: 16px;
@@ -1464,12 +1398,7 @@ input:checked + .slider:before {
   color: #444444;
 }
 
-.contact .info i {
-  font-size: 32px;
-  color: #14279b;
-  float: left;
-  line-height: 1;
-}
+
 
 .contact .info p {
   padding: 0 0 10px 42px;
